--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mini Roblox V2</title>
+  <title>Mini Roblox</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body{margin:0;background:#222;color:#fff;font-family:Arial}
-    #menu{position:fixed;inset:0;display:flex;gap:10px;flex-direction:column;align-items:center;justify-content:center;background:#111}
-    canvas{display:none;background:#333}
-    #hud{position:fixed;top:10px;left:10px}
+    body { margin:0; background:#222; color:#fff; font-family:Arial }
+    #menu {
+      position:fixed; inset:0;
+      display:flex; flex-direction:column;
+      align-items:center; justify-content:center;
+      background:#111; gap:10px;
+    }
+    canvas { display:none; background:#333 }
+    #chat {
+      position:fixed; bottom:0; left:0; width:100%;
+      background:#111; display:none;
+    }
+    #messages { max-height:120px; overflow:auto; font-size:14px }
+    #mobile {
+      position:fixed; bottom:20px; left:50%;
+      transform:translateX(-50%);
+      display:none; gap:10px;
+    }
+    #mobile button {
+      width:60px; height:60px; font-size:24px;
+    }
+    @media (max-width: 768px) {
+      #mobile { display:grid; grid-template-columns:60px 60px 60px }
+    }
   </style>
 </head>
 <body>
@@ -22,55 +43,92 @@
   <button onclick="start()">PLAY</button>
 </div>
 
-<div id="hud"></div>
 <canvas id="c" width="800" height="600"></canvas>
+
+<div id="chat">
+  <div id="messages"></div>
+  <input id="msg" placeholder="Mesaj..." 
+         onkeydown="if(event.key=='Enter')send()">
+</div>
+
+<div id="mobile">
+  <div></div>
+  <button ontouchstart="move('w')">⬆️</button>
+  <div></div>
+  <button ontouchstart="move('a')">⬅️</button>
+  <button ontouchstart="move('s')">⬇️</button>
+  <button ontouchstart="move('d')">➡️</button>
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
-const socket=io();
-const c=document.getElementById("c"),ctx=c.getContext("2d");
-let cam={x:0,y:0};
-let me={x:100,y:100,name:"",color:"#f00",skin:"square"};
-let players={}, it=null;
+const socket = io();
+const c = document.getElementById("c");
+const ctx = c.getContext("2d");
 
-if(localStorage.name) name.value=localStorage.name;
+let cam = { x:0, y:0 };
+let me = { x:100, y:100, name:"", color:"#f00", skin:"square" };
+let players = {};
+let it = null;
 
 function start(){
-  me.name=name.value||"Player";
-  me.color=color.value;
-  me.skin=skin.value;
-  localStorage.name=me.name;
+  me.name = name.value || "Player";
+  me.color = color.value;
+  me.skin = skin.value;
   menu.style.display="none";
   c.style.display="block";
+  chat.style.display="block";
 }
 
-document.onkeydown=e=>{
-  let s=6;
-  if(e.key=="w")me.y-=s;
-  if(e.key=="s")me.y+=s;
-  if(e.key=="a")me.x-=s;
-  if(e.key=="d")me.x+=s;
-  socket.emit("update",me);
+document.onkeydown = e => {
+  let s = 6;
+  if(e.key=="w") me.y-=s;
+  if(e.key=="s") me.y+=s;
+  if(e.key=="a") me.x-=s;
+  if(e.key=="d") me.x+=s;
 };
 
-socket.on("state", d=>{
-  players=d.players;
-  it=d.it;
-  hud.innerText = it ? "Ebe: "+players[it]?.name : "";
+function move(k){
+  let s = 6;
+  if(k=="w") me.y-=s;
+  if(k=="s") me.y+=s;
+  if(k=="a") me.x-=s;
+  if(k=="d") me.x+=s;
+}
+
+setInterval(()=>{
+  socket.emit("update", me);
+},50);
+
+socket.on("state", data=>{
+  players = data.players;
+  it = data.it;
 });
 
+socket.on("chat", d=>{
+  messages.innerHTML += `<div><b>${d.name}:</b> ${d.msg}</div>`;
+});
+
+function send(){
+  socket.emit("chat", { name: me.name, msg: msg.value });
+  msg.value="";
+}
+
 function drawPlayer(p){
-  ctx.fillStyle=p.color;
+  ctx.fillStyle = p.color;
   if(p.skin=="circle"){
-    ctx.beginPath();ctx.arc(p.x-cam.x,p.y-cam.y,12,0,7);ctx.fill();
-  }else{
-    ctx.fillRect(p.x-cam.x,p.y-cam.y,24,24);
+    ctx.beginPath();
+    ctx.arc(p.x-cam.x, p.y-cam.y, 12, 0, 7);
+    ctx.fill();
+  } else {
+    ctx.fillRect(p.x-cam.x, p.y-cam.y, 24, 24);
   }
-  ctx.fillText(p.name,p.x-cam.x,p.y-cam.y-5);
+  ctx.fillText(p.name, p.x-cam.x, p.y-cam.y-5);
 }
 
 function loop(){
-  cam.x=me.x-400; cam.y=me.y-300;
+  cam.x = me.x - 400;
+  cam.y = me.y - 300;
   ctx.clearRect(0,0,800,600);
   for(let id in players) drawPlayer(players[id]);
   requestAnimationFrame(loop);
