--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 <body>
 
 <div id="menu">
-  <h1>Mini Roblox</h1>
+  <h1>boblix</h1>
   <input id="name" placeholder="İsmin">
   <button onclick="start()">PLAY</button>
 </div>
